Add Query model. WIP
