# lib/queries.js
@@ -4,35 +4,38 @@ const erm = require('express-restify-mongoose');
 var adapters = require('lib/adapterManager').adapters;
 const mongoose = require('mongoose');
 
-function validateDataSourceAdapterProperties(adapter,adapterProperties){
+function validateQueryAdapterProperties(adapter,adapterProperties){
   var model = mongoose.model('Adapter properties',adapter.adapterProperties);
   var props = new model(adapterProperties);
   return props.validateSync();
 }
 
 const DataSource = require('./models/DataSource');
+const Query = require('./models/Query');
 
 module.exports = function (server){
 
 var validateBody = function(req, res, next){
-    // check if adapter exists
-    var adapter = adapters[req.body.adapter];
-    if(!adapter){
-      res.send(400, new Error("Adapter doesn't exists: "+req.body.adapter));
-      return;
-    }
-    // check if adapterProperties are valid to the adapter
-    var error = validateDataSourceAdapterProperties(adapter, req.body.adapterProperties);
-    if(error){
-      res.send(400, JSON.parse(JSON.stringify(error))); // hack to send the all error data in json format not just the message
-      return;
-    }
-    next();
+    // check if DataSource exists
+    DataSource.findById(req.body.dataSource,'name adapter', (err,ds)=>{
+        if(err){
+            res.send(400, err);
+            return;
+        }
+        if(!ds){
+            res.send(400, new Error("DataSource doesn't exist."));
+            return;
+        }
+
+        // TODO check adapterProperties
+
+        next();
+    });
   }
 
-const uri = erm.serve(server, DataSource,{
+const uri = erm.serve(server, Query,{
   prefix: "api",
-  name: "datasources",
+  name: "queries",
   version: "",
   restify: true,
   findOneAndRemove: false,
@@ -43,8 +46,6 @@ const uri = erm.serve(server, DataSource,{
   },
   preCreate: validateBody,
   preUpdate: validateBody
-
-
 });
 
 }
